# code-grep

./: CLAUDE.md  Cargo.toml  README.md  install.sh
src/: cli.rs  config.rs  lib.rs  main.rs  matcher.rs  output.rs  parser.rs  replacer.rs  searcher.rs  walker.rs
