[package]
name = "code-grep"
version = "0.1.0"
edition = "2021"
authors = ["user"]
description = "高速コード検索CLIツール - ripgrepを超える"
license = "MIT"
repository = "https://github.com/yamadatarousan/code-grep"
categories = ["command-line-utilities", "text-processing", "development-tools"]
keywords = ["grep", "search", "regex", "cli", "code"]

[[bin]]
name = "cg"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive", "color"] }
regex = "1.0"
fancy-regex = "0.11"
rayon = "1.0"
ignore = "0.4"
walkdir = "2.0"
termcolor = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
memmap2 = "0.5"
crossbeam-channel = "0.5"
indicatif = "0.17"
console = "0.15"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
